# agent-supply-chain-scanner

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
agentscan/: __init__.py  cli.py
agentscan/analyzers/: base.py  surfaces.py
agentscan/core/: detect.py  engine.py  finding.py  judge.py  report.py  rules.py
docs/: index.html
fixtures/clean/: SKILL.md
fixtures/malicious/: .mcp.json  SKILL.md
fixtures/malicious/scripts/: setup.sh
tests/: test_detections.py
